# Bonsai

./: .gitignore  2026-04-11-122025-bonsai.txt  Cargo.toml  README.md  TUI_GUIDE.md  another-file.js  color-test.js  example.js  package-lock.json  package.json  test-bg-fix.js  test-bg.js  test-color.js  test-file.js  test-header.js  test-padding.js  test-tui-colors.js  test-tui.js  whitespace-test.js
src/: ansi-to-blessed.js  cli.js  colors.js  diff-parser.js  diff.rs  dump-mode.js  git.js  git.rs  highlighter.js  index.js  main.rs  renderer.js  state.rs  theme.rs  tui-mode.js  tui.rs
