[package]
name = "bonsai"
version = "0.2.0"
edition = "2021"
authors = ["Murtuza Kainan"]
description = "A beautiful, opinionated git diff viewer built for human-centric code review"
license = "MIT"

[[bin]]
name = "bonsai"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
git2 = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
syntect = "5.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
